force-app/main/default/objects/PF_Defects__c/PF_Defects__c.object-meta.xml
<CustomObject>
    <description>This is where project defects will be captured within the ProjectForce application.</description>
    <label>Defect</label>
    <nameField>
        <displayFormat>DF-{00000}</displayFormat>
        <label>Defect #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>