force-app/main/default/objects/PF_Defects__c/fields/PF_Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>PF_Actual_Result__c</fullName>
    <label>Actual Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>