force-app/main/default/objects/PF_Defects__c/fields/PF_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>PF_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>