force-app/main/default/objects/PF_Defects__c/fields/PF_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Closed_Date__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>