force-app/main/default/objects/PF_Defects__c/fields/PF_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>