force-app/main/default/objects/PF_Defects__c/fields/PF_Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>PF_Expected_Result__c</fullName>
    <label>Expected Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>