force-app/main/default/objects/PF_Defects__c/fields/PF_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Open_Date__c</fullName>
    <label>Open Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>