force-app/main/default/objects/PF_Defects__c/fields/PF_Planned_Fixed_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Planned_Fixed_Date__c</fullName>
    <label>Planned Fixed Date</label>
    <type>Date</type>
</CustomField>