force-app/main/default/objects/PF_Defects__c/fields/PF_Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>PF_Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>