force-app/main/default/objects/PF_Defects__c/fields/PF_Steps_to_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>PF_Steps_to_Reproduce__c</fullName>
    <label>Steps to Reproduce</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>