force-app/main/default/objects/PF_Defects__c/fields/PF_Story__c.field-meta.xml
<CustomField>
    <fullName>PF_Story__c</fullName>
    <label>Story</label>
    <referenceTo>PF_Stories__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>