force-app/main/default/objects/PF_Defects__c/fields/PF_Test_Case__c.field-meta.xml
<CustomField>
    <fullName>PF_Test_Case__c</fullName>
    <label>Test Case</label>
    <referenceTo>PF_TestCases__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>