force-app/main/default/objects/PF_Defects__c/fields/PF_Testing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>PF_Testing_Cycle__c</fullName>
    <label>Testing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>