force-app/main/default/objects/PF_Defects__c/fields/PF_Type__c.field-meta.xml
<CustomField>
    <fullName>PF_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Not a Defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>