force-app/main/default/objects/PF_Defects__c/recordTypes/PF_Defect.recordType-meta.xml
<RecordType>
    <fullName>PF_Defect</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Defect</label>
</RecordType>